--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
     "next": "14.2.11",
@@ -23,7 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5"
   }
 }
