--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "framer-motion": "^11.5.4",
-    "next": "14.2.11",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2"
@@ -23,7 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
     "typescript": "^5"
   }
