--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.6",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
